[metadata]
name = renthouse
version = 0.0.1
description = Rent house
license = MIT
url = https://meow.example.com/
author = Weida
author_email = weida@example.com

[options]
python_requires = >=3.5

install_requires =
  requests==2.24.0
  beautifulsoup4==4.9.1
  toml==0.10.1

py_modules =
  fetcher
  notify
  store

scripts =
  web591.py
